tests/invalid/Constant_Invalid_2.whiley
public export method test():
    int a = Constants[5]
